# pmls-caffe

./: .agignore  .gitignore  .gitmodules  CMakeLists.txt  Makefile  Makefile.config  Makefile.config.CPU.ubuntu1404  Makefile.config.CPU.ubuntu1604  notes  pmls-caffe-env.sh
ps/: CMakeLists.txt
ps-thin/: .projectile  CMakeLists.txt  Makefile  TODOs.org  bosen.sublime-project  compile_commands.json  defns.mk.template  gtags.sh
ps-thin/app/NMF/script/: launch.py
ps-thin/app/NMF/src/: NMFEngine.hpp
ps-thin/app/dnn/: background.py  iperf_client.sh  run.sh  test.sh
ps-thin/app/dnn/datasets/: format.py
ps-thin/app/dnn/script/: gen_data2.sh  run_local.py
ps-thin/app/kmeans/src/: kmeans_worker.cpp
ps-thin/app/lda/src/: disk_stream_doc_loader.cpp  disk_stream_doc_loader.hpp  disk_stream_reader.hpp  lda_engine.hpp  lda_stats.hpp
ps-thin/app/mlr/src/: abstract_mlr_sgd_solver.hpp  lr_sgd_solver.hpp  mlr_engine.cpp  mlr_sgd_solver.cpp  mlr_sgd_solver.hpp
ps-thin/app/rand_forest/src/: rand_forest_engine.hpp
ps-thin/app/sparsecoding/src/: SCEngine.hpp
ps-thin/cmake/modules/: FindGTest.cmake
ps-thin/docs/: conf.py
ps-thin/src/: CMakeLists.txt
ps-thin/src/io/: general_fstream.cpp  hdfs.cpp
ps-thin/src/ml/disk_stream/: byte_buffer.cpp  byte_buffer.hpp  data_parser_common.hpp  disk_reader.cpp  disk_reader.hpp  disk_streamer.hpp  multi_buffer.cpp  multi_buffer.hpp
ps-thin/src/ml/feature/: abstract_datum.hpp  abstract_feature.hpp  dense_decay_feature.hpp  dense_feature.hpp  sparse_feature.hpp
ps-thin/src/ml/parsers/: libsvm_parser.hpp  text_buffer_stream.hpp
ps-thin/src/ml/util/: data_loading.cpp  data_loading.hpp  math_util.cpp  math_util.hpp  metafile_reader.cpp  metafile_reader.hpp  workload_manager.hpp
ps-thin/src/petuum_ps/aggregator/: aggregator.cpp  aggregator.hpp  aggregator_thread.cpp  aggregator_thread_group.hpp  aggregator_threads.cpp
ps-thin/src/petuum_ps/client/: abstract_client_table.hpp  abstract_table_group.hpp  client_row.hpp  client_table.cpp  client_table.hpp  oplog_serializer.hpp  ssp_client_row.hpp  table_group.cpp  table_group.hpp  thread_table.cpp  thread_table.hpp
ps-thin/src/petuum_ps/comm_bus/: comm_bus.cpp  comm_bus.hpp  zmq_util.cpp  zmq_util.hpp
ps-thin/src/petuum_ps/consistency/: abstract_consistency_controller.hpp  ssp_consistency_controller.cpp  ssp_consistency_controller.hpp
ps-thin/src/petuum_ps/include/: abstract_row.hpp  configs.hpp  constants.hpp  host_info.hpp  init_table_config.cpp  init_table_group_config.cpp  petuum_ps.hpp  ps_app.hpp  ps_table_group.hpp  row_access.hpp  system_gflags.cpp  system_gflags.hpp  system_gflags_declare.hpp  table.hpp  table_gflags.cpp  table_gflags.hpp  table_gflags_declare.hpp
ps-thin/src/petuum_ps/namenode/: name_node.cpp  name_node.hpp  name_node_thread.cpp  name_node_thread.hpp
ps-thin/src/petuum_ps/oplog/: abstract_oplog.hpp  abstract_row_oplog.hpp  append_only_oplog.hpp  append_only_oplog_partition.cpp  append_only_oplog_partition.hpp  batch_inc_append_only_buffer.cpp  batch_inc_append_only_buffer.hpp  buffer_manager.hpp  create_row_oplog.cpp  create_row_oplog.hpp  dense_append_only_buffer.cpp  dense_append_only_buffer.hpp  dense_oplog.cpp  dense_oplog.hpp  dense_row_oplog.hpp  inc_append_only_buffer.cpp  inc_append_only_buffer.hpp  meta_row_oplog.hpp  oplog_index.cpp  oplog_index.hpp  oplog_partition.hpp  row_oplog_meta.hpp  sparse_oplog.cpp  sparse_oplog.hpp  sparse_row_oplog.hpp  sparse_vector_row_oplog.hpp
ps-thin/src/petuum_ps/replica/: replica_thread.hpp  replica_threads.cpp  replica_threads.hpp
ps-thin/src/petuum_ps/scheduler/: abstract_scheduler.hpp  delay_scheduler.hpp  mlfabric_scheduler.cpp  mlfabric_scheduler.hpp  pass_through_scheduler.cpp  pass_through_scheduler.hpp  scheduler.cpp  scheduler.hpp  scheduler_recv_thread.cpp  scheduler_recv_thread.hpp  scheduler_send_thread.cpp  scheduler_send_thread.hpp  scheduler_thread.cpp  scheduler_thread.hpp  scheduler_utils.cpp  scheduler_utils.hpp
ps-thin/src/petuum_ps/server/: callback_subs.hpp  name_node.cpp  name_node.hpp  name_node_thread.cpp  name_node_thread.hpp  serialized_oplog_reader.hpp  server.cpp  server.hpp  server_row.hpp  server_table.cpp  server_table.hpp  server_thread.cpp  server_thread.hpp  server_thread_group.cpp  server_thread_group.hpp  server_threads.cpp  server_threads.hpp
ps-thin/src/petuum_ps/stats/: OneDimCounter.cpp  OneDimCounter.hpp  OneDimStorage.hpp  TwoDimCounter.hpp
ps-thin/src/petuum_ps/storage/: abstract_process_storage.hpp  bounded_dense_process_storage.cpp  bounded_dense_process_storage.hpp  bounded_sparse_process_storage.cpp  bounded_sparse_process_storage.hpp  clock_lru.cpp  clock_lru.hpp  dense_row.hpp  entry.hpp  multiplicative_dense_row.hpp  numeric_container_row.hpp  oplog_storage.cpp  oplog_storage.hpp  sorted_vector_map_row.hpp  sparse_feature_row.hpp  sparse_row.hpp
ps-thin/src/petuum_ps/thread/: abstract_bg_worker.cpp  abstract_bg_worker.hpp  append_only_row_oplog_buffer.hpp  bg_oplog.hpp  bg_oplog_partition.cpp  bg_oplog_partition.hpp  bg_worker_group.cpp  bg_worker_group.hpp  bg_workers.cpp  bg_workers.hpp  context.cpp  context.hpp  mem_transfer.hpp  msg_base.hpp  msg_tracker.cpp  msg_tracker.hpp  oplog_meta.hpp  ps_msgs.hpp  row_oplog_recycle.hpp  row_oplog_serializer.hpp  row_request_oplog_mgr.cpp  row_request_oplog_mgr.hpp  server_version_mgr.cpp  server_version_mgr.hpp  ssp_bg_worker.cpp  ssp_bg_worker.hpp  table_oplog_meta.cpp  table_oplog_meta.hpp  trans_time_estimate.hpp
ps-thin/src/petuum_ps/util/: OneDimStorage.hpp  TwoDimStorage.hpp  lock.cpp  (+30 more)
ps-thin/tests/: CMakeLists.txt
ps-thin/tests/petuum_ps/: test.cpp
ps/src/: CMakeLists.txt
(+482 files in other folders)
