message(STATUS "Petuum Tests")

file(GLOB_RECURSE Bosen_TEST_SOURCE_FILES *.[ch]pp)
set(Bosen_TEST_SOURCE_FILES ${Bosen_TEST_SOURCE_FILES} PARENT_SCOPE)

enable_testing()
find_package(GTest REQUIRED)

message(STATUS "GTEST_INCLUDE_DIRS:${GTEST_INCLUDE_DIRS}")
message(STATUS "GTEST_LIBRARIES:${GTEST_LIBRARIES}")

set(Bosen_TEST_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
set(Bosen_TEST_INCLUDE_DIRS ${Bosen_TEST_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS} PARENT_SCOPE)
set(Bosen_TEST_LIBRARIES ${Bosen_TEST_LIBRARIES} ${GTEST_LIBRARIES} PARENT_SCOPE)

